Attempt to fix horizontal scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@
 .profile{
     width: 40vh;
     height: 40vh;
+    max-height: 100vw;
+    max-width: 100vw;
     background-position: center;
     background-repeat: no-repeat;
     background-size:contain;
@@ -31,7 +33,7 @@
   border-left: solid 1px #ddd;
   color: rgb(64, 64, 64);
 }
-@media (max-width:500px){
+@media (max-width:580px){
   .name{
     writing-mode: horizontal-tb;
     display: block;
@@ -45,10 +47,14 @@
 html, body{
   margin: 0;
   padding: 0;
+  overflow-x: hidden; /*disable horizontal scroll on mobile web (The gears make the page go wide)*/
+  width: 100vw;
+}
+body{
+  position: relative; /*disable horizontal scroll on mobile web. (The gears make the page go wide)*/
 }
 .PM body{
   background-color: #f2f2f2;
-  overflow-x:hidden;
 }
 
 .left-bar{
@@ -84,7 +90,6 @@ html, body{
 .gear-container .gear{
   position: absolute;
   z-index: -10;
-  overflow: hidden;
 }
 .gear{
   transform-origin: middle;
@@ -96,8 +101,13 @@ html, body{
   animation-timing-function:linear;
   animation-duration: 15s;
   animation-iteration-count: infinite;
-  overflow:hidden;
 }
+/* @media(max-width:1000px)
+{
+  .gear{
+    display: none;
+  }
+} */
 
 /* .PM *{
   animation-timing-function: ease-in-out;
@@ -115,8 +125,7 @@ html, body{
 
 .PM nav{
   margin: 0px auto;
-  padding: 0px 0px;
-  padding-right: 5em;
+
   height: 60px;
   display: flex;
   justify-content: flex-end;
@@ -144,20 +153,26 @@ html, body{
   align-items: center;
   /*border-left: solid 1px #ddd;*/
 }
+.hamburger{
+  visibility: hidden;
+}
 .PM nav span:hover{
   background-color: #ddd;
 }
 
-@media (max-width:1300px){
+@media (max-width:400px){
   nav *{
     font-size: 0px;
     padding: 0px;
   }
   nav {
     padding: 0px;
+    padding-right: 0px;
+    margin-right: 10px;
   }
   .hamburger{
-    padding-right: 0.5em; padding-left: 0.5em;
+    margin-right: 15px;
+    visibility: visible;
   }
 }
 
